tests/ui/env-macro/error-recovery-issue-55897.stderr
error: environment variable `NON_EXISTENT` not defined at compile time
  --> $DIR/error-recovery-issue-55897.rs:12:22
   |
LL |     include!(concat!(env!("NON_EXISTENT"), "/data.rs"));
   |                      ^^^^^^^^^^^^^^^^^^^^
   |
   = help: use `std::env::var("NON_EXISTENT")` to read the variable at run time

error: suffixes on string literals are invalid
  --> $DIR/error-recovery-issue-55897.rs:17:22
   |
LL |     include!(concat!("NON_EXISTENT"suffix, "/data.rs"));
   |                      ^^^^^^^^^^^^^^^^^^^^ invalid suffix `suffix`

error[E0432]: unresolved import `prelude`
  --> $DIR/error-recovery-issue-55897.rs:3:5
   |
LL | use prelude::*;
   |     ^^^^^^^
   |     |
   |     unresolved import
   |     help: a similar path exists: `std::prelude`

error[E0432]: unresolved import `env`
  --> $DIR/error-recovery-issue-55897.rs:6:9
   |
LL |     use env;
   |         ^^^ no `env` in the root
   |
help: consider importing this module instead
   |
LL |     use std::env;
   |         +++++

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0432`.
